# pgviz

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  next.config.ts  package.json  pglens.code-workspace  pgviz.code-workspace  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
apps/api/: package.json
apps/api/src/: client.ts  desktop-client.ts  index.ts  mock-client.ts  mock-schema.ts  runtime.ts  types.ts  vscode-client.ts
apps/landing/: astro.config.mjs  package.json
apps/pgviz/: package.json
apps/pgviz-vscode/: .gitignore  package.json
apps/pgviz-vscode/src/: commands.ts  connectionTreeProvider.ts  db.ts  extension.ts  schemaTreeProvider.ts  state.ts  treeProvider.ts  webviewManager.ts
apps/pgviz-vscode/webview/: index.html
apps/pgviz/src-tauri/: Cargo.toml
apps/vscode-extension/: LICENSE  package.json
apps/vscode-extension/src/: commands.ts  extension.ts  tableTreeProvider.ts  webviewManager.ts
apps/webview/: package.json  vite.config.ts
apps/webview/src/: App.tsx  index.css
archive/: pglite-client.ts  playground-store.ts
archive/pgviz-desktop/: components.json  index.html  package.json  tsconfig.json  vite.config.ts
archive/pgviz-desktop/src-tauri/: Cargo.toml  tauri.conf.json
archive/pgviz-desktop/src-tauri/src/: commands.rs  db.rs  lib.rs  license.rs  main.rs
archive/playground/: page.tsx
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  store.rs
src/app/: layout.tsx  page.tsx
src/components/: MenuListener.tsx  TableNode.tsx  TriggersGraph.tsx
(+112 files in other folders)
