[package]
name = "pgviz"
version = "0.1.0"
description = "pgviz - Interactive PostgreSQL schema visualizer and query tool"
authors = ["pgviz"]
license = "BUSL-1.1"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pgviz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-os = "2"

tauri-plugin-store = "2"
tauri-plugin-updater = "2"
keyring = "3"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
thiserror = "2"
